--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -18,8 +18,7 @@
       <div class="post-date">
         <span class="g time">{{.Date.Format "January 2, 2006"}} </span> &#8729;
         {{ $taxonomy := "tags" }} {{ with .Param $taxonomy }}
-        {{ range $index, $tag := . }} {{ with $.Site.GetPage (printf "/%s/%s"
-        $taxonomy $tag) -}}
+        {{ range $index, $tag := . }} {{ with $.Site.GetPage (printf "/%s/%s" $taxonomy $tag) -}}
         <a href="{{ .Permalink }}">{{ $tag | urlize }}</a>
         {{- end -}} {{- end -}}
         {{ end }}
