--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -117,10 +117,7 @@ body {
   position: absolute;
   top: -40px;
   left: 0;
-  //margin: 1.5rem 0;
   background: #eee;
-  //color: white;
-  //padding: 1.5rem;
   z-index: 100;
 }
 
@@ -134,33 +131,9 @@ h1, h2, h3, h4, h5, strong, b {
     //text-transform: uppercase;
 }
 
-header {
-    //display: flex;
-    //justify-content: space-between;
-    //padding-bottom: 0.5rem;
-    line-height: 2;
-    padding-bottom: 1.5rem;
-}
-
-.link {
-    //white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    text-decoration: none;
-}
-
 .time {
     font-variant-numeric: tabular-nums;
     white-space: nowrap;
-}
-
-blockquote {
-    border-left: 5px solid #eee;
-    padding-left: 1rem;
-    margin: 0;
 }
 
 a,
@@ -173,8 +146,6 @@ a.heading-link {
     text-decoration: none
 }
 
-
-
 ul {
     list-style-type: square;
 }
@@ -183,18 +154,44 @@ ul, ol {
     padding-left: 1.2rem;
 }
 
-.list {
-    line-height: 2;
-    list-style-type: none;
-    padding-left: 0;
-}
+#last-post{
+  a {
+	  //white-space: nowrap;
+	  overflow: hidden;
+	  text-overflow: ellipsis;
+	  white-space: nowrap;
+	  overflow: hidden;
+	  text-overflow: ellipsis;
+	  text-decoration: none;
+  }
 
-.list li {
-    padding-bottom: .1rem
-}
+  ul {
+	  line-height: 2;
+	  list-style-type: none;
+	  padding-left: 0;
+  }
 
-.meta {
-    color: #777
+  ul li {
+	  display: flex;
+	  padding-bottom: .1rem;
+	  align-items: baseline;
+  }
+
+  time {
+	  font-variant-numeric: tabular-nums;
+	  white-space: nowrap;
+	  flex: 0 1 auto;
+  }
+
+  .hr-line{
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
+    border: 0;
+    border-bottom: 1px solid #ccc;
+    flex: 1 0 1rem;	
+  }
 }
 
 .content {
@@ -203,75 +200,41 @@ ul, ol {
     // text-align: justify;
 }
 
-header {
-    line-height: 2;
-    //padding-bottom: 1.5rem;
-    //flex-basis: 10rem;
-    //flex-grow: 1;
-    //position: relative;
+#header-menu {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 1rem;
-}
-
-header a {
-    text-decoration: none;
-}
-
-header ul {
-    list-style-type: none;
-    padding: 0;
-    //border-right: 1px solid #edf2f7;
-
-}
-
-header li, header a {
-    //margin-bottom: .2rem;
-    //text-align: right;
-    //margin-right: 2rem;
-    display: inline;
-}
-
-h2.post {
-    padding-top: .5rem;
-}
-
-header ul a:first-child {
-    padding-left: 1rem;
-}
-
-.nav {
-    height: 1px;
-    //background: #000;
-    content: '';
-    max-width: 10%;
-}
-
-.list li {
-    display: flex;
-    align-items: baseline;
-}
-
-.list li time {
-    flex: 0 1 auto;
-}
-
-.hr-list {
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-right: .5rem;
-    margin-left: .5rem;
-    height: 1px;
-    border: 0;
+    align-items: center;
+    margin-bottom: 1rem;
+	padding-bottom: 0.5rem;
     border-bottom: 1px dotted #ccc;
-    flex: 1 0 1rem;
-    //opacity: .25;
-}
 
-.m,
-hr {
-    border: 0;
-    margin: 3rem 0
+	header {
+	  line-height: 0;
+	  padding-bottom: 0;
+	}
+
+	a {
+		text-decoration: none;
+		display: inline;
+	}
+
+	nav ul {
+		list-style-type: none;
+		padding: 0;
+		margin: 0;
+	}
+
+	header h1 {
+		padding: 0;
+		margin: 0;
+	}
+
+	nav li {
+	}
+
+	nav ul a:first-child {
+		padding-left: 1rem;
+	}
 }
 
 img {
@@ -279,33 +242,15 @@ img {
     height: auto;
 }
 
-
 .post-date {
     margin: 5% 0 5%;
 }
 
-.index-date {
-    color: #9a9a9a;
-}
 
 .animate-blink {
     animation: opacity 1s infinite;
     opacity: 1;
     // margin-left: -1%;
-}
-
-@keyframes opacity {
-  0% {
-    opacity: 1;
-  }
-
-  50% {
-    opacity: 0.5;
-  }
-
-  100% {
-    opacity: 0;
-  }
 }
 
 .tags {
@@ -322,11 +267,3 @@ img {
     display: inline;
 }
 
-.avatar {
-    height: 120px;
-    width: 120px;
-    position: relative;
-    margin: -10px 0 0 15px;
-    float: right;
-    border-radius: 50%;
-}
