--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,17 +1,20 @@
-<header>
-<p style="padding: 0;margin: 0;">
-  <a href="/">
-    <b>{{ .Site.Title }}</b>
-    <span class="text-stone-500 animate-blink">▮</span>
-  </a>
-</p>
-<ul style="padding: 0;margin: 0;">
-  {{ $currentPage := . }}
-  {{ range .Site.Menus.main }}
-  <li class="{{ if $currentPage.HasMenuCurrent "main" . }}active{{ end }}">
-    <a href="{{ .URL }}"><span>{{ .Name }}</span></a>
-    {{ end }}
-  </li>
-</ul>
-</header>
-<hr class="hr-list" style="padding: 0;margin: 0;">
+<div id="header-menu">
+  <header>
+    <h1>
+      <a href="/">
+        <b>{{ .Site.Title }}</b>
+        <span class="animate-blink">▮</span>
+      </a>
+    </h1>
+  </header>
+  <nav>
+    <ul>
+      {{ $currentPage := . }}
+      {{ range .Site.Menus.main }}
+      <li class="{{ if $currentPage.HasMenuCurrent "main" . }}active{{ end }}">
+        <a href="{{ .URL }}"><span>{{ .Name }}</span></a>
+        {{ end }}
+      </li>
+    </ul>
+  </nav>
+</div>
