--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,5 @@
-<div id="header-menu">
+<div id="top-banner">
+<div id="header-menu" class="content">
   <header>
     <h1>
       <a href="/">
@@ -16,4 +17,5 @@
       </li>
     </ul>
   </nav>
+</div>
 </div>
