--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -269,7 +269,7 @@ img {
 		color: var(--color-header-logo);
 		font-weight: 600;
 	}
-	a:hover{
+	a:hover, a .active{
 		color: var(--color-header-text);
 		text-decoration: none;
 	}
@@ -278,6 +278,7 @@ img {
 		list-style-type: none;
 		padding: 0;
 		margin: 0;
+        display:flex;
 	}
 
 	header h1 {
