--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -43,7 +43,7 @@
       "headline": "{{ .Title | safeJS }}",
       "alternativeHeadline": "{{ .Params.lead }}",
       "description": "{{ if .Description }}{{ .Description | safeJS }}{{ else }}{{if .IsPage}}{{ .Summary  }}{{ end }}{{ end }}",
-      "inLanguage": {{ .Site.LanguageCode | default "en-us" }},
+      "inLanguage": "{{ .Site.LanguageCode | default "en-us" }}",
       "isFamilyFriendly": "true",
       "mainEntityOfPage": {
           "@type": "WebPage",
