--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -68,8 +68,8 @@
       "dateModified": "{{ .Lastmod.Format "2006-01-02T15:04:05.00Z" | safeHTML }}",
       "publisher":{
           "@type":"Organization",
-          "name": {{ $org_name }},
-          "url": {{ .Site.BaseURL }},
+          "name": "{{ $org_name }}",
+          "url": "{{ .Site.BaseURL }}",
           "logo": {
               "@type": "ImageObject",
               "url": "{{ .Site.Params.logo | absURL }}",
@@ -77,7 +77,7 @@
               "height":"32"
           }
       },
-      "image": {{ if .Params.images }}[{{ range $i, $e := .Params.images }}{{ if $i }}, {{ end }}{{ $e | absURL }}{{ end }}]{{ else}}{{.Site.Params.logo | absURL }}{{ end }},
+      "image": {"{ if .Params.images }}[{{ range $i, $e := .Params.images }}{{ if $i }}, {{ end }}{{ $e | absURL }}{{ end }}]{{ else}}{{.Site.Params.logo | absURL }}{{ end }}",
       "url" : "{{ .Permalink }}",
       "wordCount" : "{{ .WordCount }}",
       "genre" : [ {{ range $index, $tag := .Params.tags }}{{ if $index }}, {{ end }}"{{ $tag }}" {{ end }}],
