--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -10,7 +10,7 @@
     {{ template "_internal/google_analytics_async.html" . }}
     {{ template "_internal/twitter_cards.html" . }}
     <link rel="canonical" href="{{ .Permalink }}">
-    <link rel="icon" href="{{ .Site.BaseURL }}/assets/favicon.ico">
+    <link rel="icon" href="{{ .Site.BaseURL }}/favicon.ico">
     <link rel="alternate" type="application/atom+xml" title="{{ .Site.Title }}" href="{{ .Site.BaseURL }}/atom.xml" />
     <link rel="alternate" type="application/json" title="{{ .Site.Title }}" href="{{ .Site.BaseURL }}/feed.json" />
     <link rel="shortcut icon" type="image/png" href=''>
